--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Todo: Create a modal with a form to add tasks -->
     <div class="row swim-lanes text-center justify-content-between" >
       <div class="col-12 col-lg-4 d-flex">
-        <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
+        <div id="to-do" class="card border-light mb-3 lane flex-grow-1"ondrop="handleDrop(event)" ondragover="handleDragOver(event)" ondragend="handleDragEnd(event)" ondragenter="handleDragEnter(event)">
           <div class="card-header bg-white">
             <h2 class="card-title mb-1">To Do</h2>
           </div>
@@ -82,7 +82,7 @@
         </div>
         </div>
         <div class="col-12 col-lg-4 d-flex">
-          <div id="done" class="card border-light mb-3 lane flex-grow-1">
+          <div id="done" class="card border-light mb-3 lane flex-grow-1" ondrop="handleDrop(event)" ondragover="handleDragOver(event)" ondragend="handleDragEnd(event)" ondragenter="handleDragEnter(event)">
             <div class="card-header bg-white">
               <h2 class="card-title mb-1">Done</h2>
             </div>
